--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,30 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-weight: 500;
+    font-style: normal;
+}
+
+body {
+    font-family: 'Heebo', sans-serif;
+}
+
+p {
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 22px;
+}
+
+.fw-400 {
+    font-weight: 400;
+}
+
+.fw-500 {
+    font-weight: 500;
+}
+
+.fw-700 {
+    font-weight: 700;
 }
 
 .wrapper {
@@ -13,7 +37,7 @@
 
 .setwidth {
     min-width: 375px;
-    max-width: 550px;
+    max-width: 375px;
 }
 
 .border {
@@ -28,13 +52,22 @@
     border: solid 1px grey;
 } */
 
-.flex-column-center {
+.flex-column {
     display: flex;
     flex-direction: column;
 }
 
+.flex-column-align-left {
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+}
+
 .flex-row {
     display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-start;
 }
 
 .flex-grow-1 {
@@ -62,7 +95,7 @@
 #how-to-use {
     padding: 5px;
     background-color: lightgrey;
-    border-radius: 10px;
+    border-radius: 8px;
     margin-top: 5px;
 }
 
@@ -71,6 +104,11 @@
 }
 
 .score {
+    font-size: 36px;
+    font-weight: 700;
+}
+
+.border-top {
     border-top: solid 1px lightgrey;
 }
 
@@ -81,27 +119,37 @@
 
 #potential-impact-inner-container {
     border: solid 1px black;
-    border-radius: 5px;
+    border-radius: 8px;
     padding: 20px;
 }
 
 #payment-container {
     border: solid 1px black;
-    border-radius: 5px;
+    border-radius: 8px;
     display: flex;
     flex-direction: column;
 }
 
 #payment-container-label {
     border-bottom: solid 1px black;
-    padding: 10px;
     background-color: lightgrey;
+}
+
+.padding-10 {
+    padding: 10px;
 }
 
 .flex-centered {
     display: flex;
     flex-direction: column;
     justify-content: center;
+}
+
+.flex-centered-align-center {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .logo-container {
@@ -111,4 +159,45 @@
 .flex-row-aligned {
     display: flex;
     align-items: center;
+}
+
+.section-title {
+    font-size: 18px;
+    color: navy;
+}
+
+.points-count {
+    font-size: 12px;
+}
+
+#how-to-use {
+    padding: 15px 20px 13px 20px;
+}
+
+.margin-bottom-10 {
+    margin-bottom: 10px;
+}
+
+.margin-bottom-20 {
+    margin-bottom: 20px;
+}
+
+.margin-bottom-30 {
+    margin-bottom: 30px;
+}
+
+.margin-bottom-35 {
+    margin-bottom: 35px;
+}
+
+.margin-bottom-40 {
+    margin-bottom: 40px;
+}
+
+.margin-bottom-50 {
+    margin-bottom: 50px;
+}
+
+.margin-top-35 {
+    margin-top: 35px;
 }
