--- a/styles.css
+++ b/styles.css
@@ -192,7 +192,10 @@ h2 {
 #potential-impact-inner-container {
     border: solid 1px black;
     border-radius: 8px;
-    padding: 20px;
+    display: grid;
+    padding: 10px;
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 29px;
 }
 
 #payment-container {
@@ -220,6 +223,7 @@ h2 {
     color: black;
     font-weight: 500;
     font-size: 14px;
+    margin-left: 7px;
 }
 
 .flex-centered {
