--- a/styles.css
+++ b/styles.css
@@ -92,11 +92,24 @@ h2 {
     opacity: 0.5;
 }
 
-#debt-payment {
+#target-credit-section {
+    display: grid;
+    grid-template: 1fr;
+}
+
+#credit-scores {
+    order: 2;
+}
+
+#target-score {
+    order: 1;
+}
+
+#debt-payment-menu-item {
     flex-grow: 2;
 }
 
-#debt-payment h4 {
+#debt-payment-menu-item h4 {
     margin-left: 10px;
 }
 
@@ -159,7 +172,7 @@ h2 {
     -webkit-appearance: none;
     appearance: none;
     width: 15px;
-    height: 24px;
+    height: 30px;
     cursor: pointer;
     border: 3.44565px solid #FFFFFF;
     box-shadow: 0px 0px 4.5942px rgba(0, 0, 0, 0.25);
@@ -168,7 +181,7 @@ h2 {
 
 #score-slider::-moz-range-thumb {
     width: 15px;
-    height: 24px;
+    height: 30px;
     cursor: pointer;
     border: 3.44565px solid #FFFFFF;
     box-shadow: 0px 0px 4.5942px rgba(0, 0, 0, 0.25);
@@ -290,3 +303,18 @@ h2 {
 .margin-top-35 {
     margin-top: 35px;
 }
+
+
+
+/* media query */
+
+@media only screen and (min-width: 800px) {
+    .setwidth {
+        min-width: 700px;
+        max-width: 1440px;
+    }
+
+    #target-credit-section {
+        grid-template-columns: 1fr 1fr;
+    }
+  }
