--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,8 @@ h2 {
     font-size: 22px;
 }
 
+/* GRID */
+
 .main-grid {
     display: grid;
     grid-template-columns: 1fr;
@@ -68,6 +70,8 @@ h2 {
     grid-area: footer;
 }
 
+
+/* SECTIONS */
 
 
 .fw-400 {
@@ -163,12 +167,18 @@ h2 {
     border-top: solid 1px lightgrey;
 }
 
+/* Target Score Form */
 .target-score-grid {
     display: grid;
     grid-template-columns: 1fr;
+    grid-template-areas: 
+        "input-field"
+        "slider"
+        "button";
 }
 
 #score-input-field {
+    grid-area: input-field;
     padding: 14px;
     font-family: Heebo;
     font-style: normal;
@@ -185,6 +195,7 @@ h2 {
 }
 
 #score-slider {
+    grid-area: slider;
     width: 335px;
     -webkit-appearance: none;
     height: 24px;
@@ -218,6 +229,7 @@ h2 {
   }
 
 #score-submit {
+    grid-area: button;
     text-align: center;
     font-family: 'Heebo', sans-serif;
     font-weight: 500;
@@ -230,6 +242,7 @@ h2 {
     box-shadow: 0px 1px 1px rgba(22, 29, 37, 0.1), inset 0px 2px 0px rgba(255, 255, 255, 0.06);
     border-radius: 4px;
 }
+/*  */
 
 #potential-impact-inner-container {
     border: solid 1px black;
@@ -352,6 +365,19 @@ h2 {
         "target-score credit-scores"
         "rec-actions-container rec-actions-container"
         "footer footer";
+    }
+
+    .target-score-grid {
+        display: grid;
+        column-gap: 18px;
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+        grid-template-areas: 
+            "input-field input-field input-field button button"
+            "slider slider slider slider slider";
+    }
+
+    #score-slider {
+        width: 100%;
     }
 
     #target-credit-section {
