--- a/styles.css
+++ b/styles.css
@@ -181,9 +181,9 @@ p {
 }
 
 #score-slider {
-    grid-area: slider;
-    width: 335px;
     -webkit-appearance: none;
+    grid-area: slider;
+    width: 100%;
     height: 24px;
     /* Mathmetically Correct Ratio Slider */
     /* background-image: linear-gradient(to right, #F53758 47%, #F2C632 47% 82%, #27D381 82%); */
@@ -251,8 +251,7 @@ p {
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-areas: 
     "pc-subcontainer pc-subcontainer pc-subcontainer"
-    "result-desc result-desc result-desc"
-    "bureau-1 bureau-2 bureau-3";
+    "pc-subcontainer-3 pc-subcontainer-3 pc-subcontainer-3";
 }
 
 .pc-subcontainer {
@@ -260,6 +259,12 @@ p {
     display: grid;
     grid-template-columns: 1fr;
     border-radius: inherit;
+}
+
+.pc-subcontainer-3 {
+    grid-area: pc-subcontainer-3;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
 }
 
 .payment-type {
@@ -286,11 +291,10 @@ p {
 }
 
 .result-desc {
-    grid-area: result-desc;
     font-weight: 400;
 }
 
-.bureau-1 {
+/* .bureau-1 {
     grid-area: bureau-1;
 }
 
@@ -300,7 +304,7 @@ p {
 
 .bureau-3 {
     grid-area: bureau-3;
-}
+} */
 
 .bureau {
     display: flex;
@@ -447,6 +451,10 @@ p {
     font-size: 12px;
 }
 
+.padding-20 {
+    padding: 20px;
+}
+
 /* .fw-400 {
     font-weight: 400;
 }
@@ -582,9 +590,9 @@ p {
     }
 
     .payment-container {
-        grid-template-columns: 29fr 7fr 7fr 7fr;
+        grid-template-columns: 7fr 5fr;
         grid-template-areas: 
-        "pc-subcontainer bureau-1 bureau-2 bureau-3";
+        "pc-subcontainer pc-subcontainer-3";
         background-color: #F5FAFF;
         border-radius: 0px;
     }
@@ -595,6 +603,10 @@ p {
         margin-top: 15px;
         margin-bottom: 15px;
         border-radius: 0px;
+    }
+
+    .pc-subcontainer-3 {
+        column-gap: 29px;
     }
 
     .bottom-payment-container {
