--- a/styles.css
+++ b/styles.css
@@ -145,7 +145,6 @@ p {
         "slider"
         "score-scale"
         "button";
-    row-gap: 20px;
 }
 
 #score-input-field {
@@ -163,6 +162,7 @@ p {
     border: 1px solid #D7DEE4;
     border-radius: 4px;
     height: 50px;
+    margin-bottom: 20px;
 }
 
 #score-scale {
@@ -172,8 +172,10 @@ p {
     font-size: 12px;
     font-weight: 400;
     color: #6B6C6F;
-    margin-top: -15px;
-    width: 335px;
+    width: 100%;
+    height: 25px; 
+    margin-top: 8px;
+    margin-bottom: 15px;
 }
 
 #scale-increment-end {
@@ -194,6 +196,10 @@ p {
     outline: none;
     border: 1px solid #D7DEE4;
     border-radius: 4px;
+}
+
+#score-slider::-moz-focus-outer {
+    border: 0;
 }
 
 #score-slider::-moz-range-track {
@@ -224,6 +230,7 @@ p {
     border: 3.44565px solid #FFFFFF;
     box-shadow: 0px 0px 4.5942px rgba(0, 0, 0, 0.25);
     border-radius: 6px;
+    background-color: white;
   }
 
 /* NEW SLIDER */
@@ -634,8 +641,6 @@ p {
     }
 
     #target-score-form {
-        column-gap: 18px;
-        row-gap: 28px;
         grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
         grid-template-areas: 
             "input-field input-field input-field button button"
@@ -645,6 +650,25 @@ p {
 
     #score-scale {
         width: 100%;
+    }
+
+    #score-slider::-webkit-slider-thumb {
+        border: 5.33333px solid #FFFFFF;
+        height: 33.3px;
+        width: 33.3px;
+        border-radius: 50px;
+        margin: -5px;
+    }
+    
+    #score-slider::-moz-range-thumb {
+        border: 5.33333px solid #FFFFFF;
+        height: 33.3px;
+        width: 33.3px;
+        border-radius: 50px;
+    }
+
+    #score-submit {
+        margin-left: 20px;
     }
 
     #target-credit-section {
@@ -704,21 +728,6 @@ p {
 
     #footer {
         margin-left: 30px;
-    }
-
-    #score-slider::-webkit-slider-thumb {
-        border: 5.33333px solid #FFFFFF;
-        height: 33.3px;
-        width: 33.3px;
-        border-radius: 50px;
-        margin: -5px;
-    }
-    
-    #score-slider::-moz-range-thumb {
-        border: 5.33333px solid #FFFFFF;
-        height: 33.3px;
-        width: 33.3px;
-        border-radius: 50px;
     }
 
   }
